Fri Apr  9 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, b.c, b.h, bw.c, help.c, main.c, menu.c, rc.c,
	scrn.c, scrn.h, types.h, uedit.c, w.c, wcwidth.c:

	Initial check-in of UTF-8 support.  Use ^T U to enable UTF-8.
	JOE is likely to have many bugs at this point.

Thu Apr  8 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, b.c, joerc.in, rc.c, rc.h, tw.c, types.h:

	Fix screen update bug introduced with Apr 7th change.

	Option settings now can be based on file contents as well as
	file name.

	Added syntax indicator for status line.

Thu Apr  8 2004  Joe Allen <jhallen@world.std.com>
	* syntax.c, syntax.h:

	Clean up syntax.c: use hash table for keywords, use subroutine for
	allocating new states.


Wed Apr  7 2004  Joe ALlen <jhallen@world.std.com>
	* scrn.c, bw.c:

	Fix highlighting bug: pointer was not always at start of line.

	Assume terminal supports color if it looks like an ansi terminal
	(this should really be an option).

Tue Apr  6 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, bw.c, configure.ac, joerc.in, rc.c, scrn.c,
	scrn.h, syntax.c, syntax.h, c.jsf.in, perl.jsf.in, verilog.jsf.in:

	Clean up meaning of default color.

	Allow syntax to be specified in joerc file: "-syntax perl"

	Add class definitions to syntax files.

	Add perl and verilog definitions (they need work).

	Change joerc to assume files with . in their name do not want word
	wrap enabled (except for .txt).

Thu Apr  1 2004  Joe Allen <jhallen@world.std.com>
	* scrn.c:
	Fix color handling for terminals which do not use my defaults :-)
	Basically we revert to the default text color, use ESC [ 0 m, not
	ESC [ 37 m and ESC [ 40 m.

Tue Mar 30 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c, syntax.c, syntax.h, types.h, bw.c:
	Next steps for syntax highlighting: 
		Now there is a real parser, so syntax files
		can be defined (although, it only loads
		the C language c.jsf for now).

		The line length limit has been eliminated.
