@@ -78,7 +78,7 @@ struct point {
 
 	B	*b;		/* ?B ??? */
 	int	ofst;		/* ??? */
-	char	*ptr;		/* ??? */
+	unsigned char	*ptr;	/* ??? */
 	H	*hdr;		/* ?H ??? */
 
 	long	byte;		/* ??? */
